[project]
name = "who-owns-mass-backend"
version = "0.1-beta.1"
description = "Django backend for Who Owns Massachusetts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "appnope==0.1.4",
    "asgiref==3.11.1",
    "astroid==4.0.3",
    "asttokens==3.0.1",
    "backcall==0.2.0",
    "black==25.1.0",
    "certifi==2025.8.3",
    "click==8.2.1",
    "decorator==5.2.1",
    "dill==0.4.0",
    "django==6.0.2",
    "django-cors-headers==4.9.0",
    "django-environ==0.12.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "djangorestframework==3.16.1",
    "djangorestframework-gis==1.2.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "exceptiongroup==1.3.1",
    "executing==2.2.0",
    "geoalchemy2==0.18.0",
    "geojson-pydantic==2.0.0",
    "gunicorn>=25.1.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "ipython==9.9.0",
    "ipython-pygments-lexers==1.1.1",
    "isort==7.0.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.1.0",
    "numpy==2.3.2",
    "packaging==25.0",
    "parso==0.8.5",
    "pathspec==1.0.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "platformdirs==4.9.2",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.51",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "psycopg2-binary==2.9.11",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.0",
    "pygments==2.19.2",
    "pylint==4.0.4",
    "pylint-django==2.7.0",
    "pylint-plugin-utils==0.9.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rich==14.1.0",
    "rich-toolkit==0.14.9",
    "rignore==0.6.4",
    "sentry-sdk==2.34.1",
    "shapely==2.1.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.42",
    "sqlparse==0.5.5",
    "stack-data==0.6.3",
    "tomli==2.4.0",
    "tomlkit==0.14.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.35.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
]
