[project]
name = "who-owns-mass-backend"
version = "0.1-beta.1"
description = "Django backend for Who Owns Massachusetts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==6.0.3",
    "django-extensions==4.1",
    "djangorestframework==3.16.1",
    "djangorestframework-gis==1.2.0",
    "gunicorn>=25.1.0",
    "psycopg>=3.3.3",
    "python-environ>=0.4.54",
    "uvicorn==0.44.0",
    "uvloop==0.22.1",
]
